Bug 1610597 - Re-introduce display: -moz-stack; as <legacy-stack>. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D62758